--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dict-aggr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zinc0x1E.github.io/dict-aggr",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -9,6 +10,7 @@
     "antd": "^4.15.3",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.6",
+    "gh-pages": "^3.1.0",
     "jsdom": "^16.5.3",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
